--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 body{
-    background-color: blue;
+    background-color: #0000ff;
+    font-weight: bold;
+    color: #ff0000;
 }
